<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Персонажи</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="attributes">Характеристики персонажа</string>
    <!-- ===== RACE DESCRIPTIONS ===== -->

    <string name="race_dwarf">
Увеличение характеристик. Значение вашего Телосложения увеличивается на 2.

Возраст. Дварфы взрослеют с той же скоростью, что и люди, но считаются юными, пока не достигнут пятидесятилетнего возраста. В среднем они живут свыше 350 лет.

Размер. Рост двварфов находится между 4 и 5 футами (122 и 152 сантиметрами). Ваш размер — Средний.

Скорость. Ваша базовая скорость ходьбы составляет 25 футов. Ношение тяжёлых доспехов не снижает вашу скорость.

Тёмное зрение. Вы видите в темноте на 60 футов.

Дварфийская устойчивость. Преимущество к спасброскам от яда, сопротивление урону ядом.

Языки. Общий и Дварфийский.
</string>

    <string name="race_elf">
Увеличение характеристик. Ловкость увеличивается на 2.

Возраст. Эльфы считаются взрослыми в 100 лет и могут жить до 750 лет.

Размер. Средний.

Скорость. 30 футов.

Тёмное зрение. 60 футов.

Обострённые чувства. Владение навыком Восприятие.

Транс. Эльфы не нуждаются во сне.

Языки. Общий и Эльфийский.
</string>

    <string name="race_half_orc">
Увеличение характеристик. Сила +2, Телосложение +1.

Возраст. Полуорки взрослеют к 14 годам и редко живут дольше 75 лет.

Размер. Средний.

Скорость. 30 футов.

Тёмное зрение. 60 футов.

Угрожающий вид. Владение Запугиванием.

Непоколебимая стойкость. Один раз за долгий отдых остаётесь с 1 хитом.

Свирепые атаки. Дополнительная кость урона при крите.

Языки. Общий и Орочий.
</string>

    <string name="race_tiefling">
Увеличение характеристик. Интеллект +1, Харизма +2.

Возраст. Живут немного дольше людей.

Размер. Средний.

Скорость. 30 футов.

Тёмное зрение. 60 футов.

Адское сопротивление. Сопротивление урону огнём.

Дьявольское наследие. Thaumaturgy, Hellish Rebuke, Darkness.

Языки. Общий и Инфернальный.
</string>

    <string name="race_human">
Увеличение характеристик. Все характеристики +1.

Возраст. До 100 лет.

Размер. Средний.

Скорость. 30 футов.

Языки. Общий и ещё один на выбор.
</string>

    <!-- ===== SUBRACES ===== -->

    <string name="subrace_high_elf">
Интеллект +1.

Владение длинным мечом, коротким мечом, коротким и длинным луками

Заговор волшебника.

Дополнительный язык.
</string>

    <string name="subrace_wood_elf">
Мудрость +1.

Владение длинным мечом, коротким мечом, коротким и длинным луками.

Скорость увеличена до 35 футов.

Маскировка в дикой местности.
</string>

    <string name="subrace_mountain_dwarf">
Сила +2.

Владение лёгкими и средними доспехами.
</string>

    <string name="subrace_hill_dwarf">
Мудрость +1.

Максимум хитов +1 за уровень.
</string>

    <!-- general -->
    <string name="unnamed_character">Безымянный Персонаж</string>
    <string name="edit_name">Изменить</string>
    <string name="placeholder_dash">—</string>
    <string name="save_character">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="open_save_screen">Сохранить персонажа</string>
    <string name="characters_list_title">Персонажи</string>


    <!-- stat abbreviations -->
    <string name="str_abbrev">STR</string>
    <string name="dex_abbrev">DEX</string>
    <string name="con_abbrev">CON</string>
    <string name="int_abbrev">INT</string>
    <string name="wis_abbrev">WIS</string>
    <string name="cha_abbrev">CHA</string>

    <string name="saving_throws_label"></string>

    <!-- class / labels -->

    <string name="fighter_title">Воин (уровень 1)</string>
    <string name="fighter_proficiencies">Владения: Все доспехи, щиты; Простое и воинское оружие</string>

    <string name="fighter_saves"> Сила, Телосложение</string>
    <string name="class_label">Класс:</string>
    <string name="hit_dice_label">Кость Хитов:</string>
    <string name="hp_first_level">Хиты на 1 уровне:</string>
    <string name="proficiencies_label">Владения:</string>
    <string name="saves_label">Спасброски:</string>
    <string name="choose_two_skills">Выберите два навыка (класс):</string>
    <string name="equipment_groups_info">Экипировка (выберите по одному варианту в каждой группе):</string>

    <string name="group1_label">Группа 1: Броня</string>
    <string name="group2_label">Группа 2: Первое оружие</string>
    <string name="group3_label">Группа 3: Второе оружие/доп.</string>
    <string name="group4_label">Группа 4: Набор</string>

    <string name="armor_chain">Кольчуга</string>
    <string name="armor_leather_bow">Кожаный доспех, длинный лук и 20 стрел</string>

    <string name="weapon_shield">Воинское оружие и щит</string>
    <string name="weapon_two">Два воинских оружия</string>

    <string name="weapon_crossbow">Лёгкий арбалет и 20 болтов</string>
    <string name="weapon_handaxes">Два ручных топора</string>

    <string name="pack_explorer">Набор исследователя подземелий</string>
    <string name="pack_traveler">Набор путешественника</string>

    <string name="equipment_label">Экипировка:</string>

    <string name="background_label">Предыстория:</string>
    <string name="bg_equipment_label">Экипировка предыстории:</string>

    <!-- skills -->
    <string name="skill_acrobatics">Акробатика</string>
    <string name="skill_athletics">Атлетика</string>
    <string name="skill_perception">Восприятие</string>
    <string name="skill_survival">Выживание</string>
    <string name="skill_intimidation">Запугивание</string>
    <string name="skill_history">История</string>
    <string name="skill_insight">Проницательность</string>
    <string name="skill_animal_handling">Уход за животными</string>

    <!-- arrays -->
    <string-array name="classes_array">
        <item>Выберите класс</item>
        <item>Воин</item>
    </string-array>

    <string-array name="backgrounds_array">
        <item>Выберите предысторию</item>
        <item>Солдат</item>
    </string-array>

    <!-- background content -->
    <string name="bg_soldier_skills">Атлетика, Запугивание</string>
    <string name="bg_soldier_tools">Владение инструментами: один игровой набор, сухопутный транспорт.</string>
    <string name="bg_soldier_equipment">Знак отличия\nТрофей с убитого врага (кинжал/сломанный клинок/кусок знамени)\nНабор игровых костей или колода карт\nОбычная одежда\nПоясной кошель с 10 зм</string>

    <!-- other UI text -->
    <string name="choose_race_subrace_warning">Выберите расу и подрасу (если требуется) перед продолжением</string>
    <string name="health_1st">"Хиты на 1 уровне: "</string>

</resources>